Swagger:StudentCollaborationsAnnotations
